--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,20 +1,89 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+    <div class="footer__content">
+      <ul>
+        <li><h4>Elevating brands through digital innovation.</h4></li>
+        <li><p class="p-3">Mary Fisher.</p></li>
+      </ul>
+      <ul class="footer__menu">
+        <li><p class="p-1">Company</p></li>
+        <li class="footer__menu-item">
+          <a href="#" class="footer__menu-link p-2">Home</a>
+        </li>
+        <li class="footer__menu-item">
+          <a href="#" class="footer__menu-link p-2">Services</a>
+        </li>
+        <li class="footer__menu-item">
+          <a href="#" class="footer__menu-link p-2">Portfolio</a>
+        </li>
+        <li class="footer__menu-item">
+          <a href="#" class="footer__menu-link p-2">About Us</a>
+        </li>
+      </ul>
+      <ul class="footer__social">
+        <li><p class="p-1">Socials</p></li>
+        <li class="footer__social-item">
+          <a href="#" class="footer__social-link p-2">Dribble</a>
+        </li>
+        <li class="footer__social-item">
+          <a href="#" class="footer__social-link p-2">Behance</a>
+        </li>
+        <li class="footer__social-item">
+          <a href="#" class="footer__social-link p-2">Facebook</a>
+        </li>
+        <li class="footer__social-item">
+          <a href="#" class="footer__social-link p-2">LinkedIn</a>
+        </li>
+      </ul>
+      <ul class="footer__contacts">
+        <li><p class="p-1">Contact</p></li>
+        <li class="footer__contacts-item">
+          <span class="icon-sms"></span><a class="p-2" href="mailto:email@example">email@example</a
+          ><span class="icon-copy"></span>
+        </li>
+        <li class="footer__contacts-item">
+          <span class="icon-call"></span><a class="p-2" href="tel:+123455677">+ 1 234 55 677</a
+          ><span class="icon-copy"></span>
+        </li>
+        <li class="footer__contacts-item">
+          <span class="icon-location"></span>
+          <p class="p-2">Warsaw, Poland</p>
+        </li>
+        <li class="footer__contacts-item">
+          <a href="#" class="btn btn_secondary">
+            <span class="btn__text">Contact Us</span>
+            <span class="btn__icon btn__icon-arrow">
+              <span class="icon-arrow-right"></span>
+            </span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </footer>
+<div class="footer-bottom">
+  <div class="container">
+    <div class="footer-bottom__content">
+      <span>© 2023 MaryFisher. All Rights Reserved.</span>
+      <a href="#">Terms of Service</a>
+      <a href="#">Privacy Policy</a>
+    </div>
+  </div>
+</div>
 <div class="mobile-menu" id="mobMenu">
   <div class="nav">
     <ul class="nav__list">
       <li class="nav__item">
-        <a href="#" class="nav__link">Home</a>
+        <a href="./index.html" class="nav__link">Home</a>
       </li>
       <li class="nav__item">
-        <a href="#" class="nav__link">Portfolio</a>
+        <a href="./pages/portfolio.html" class="nav__link">Portfolio</a>
       </li>
       <li class="nav__item">
-        <a href="#" class="nav__link">Services</a>
+        <a href="./pages/services.html" class="nav__link">Services</a>
       </li>
       <li class="nav__item">
-        <a href="#" class="nav__link">About Us</a>
+        <a href="./pages/about.html" class="nav__link">About Us</a>
       </li>
     </ul>
     <ul class="btn__list">
