--- a/src/components/testimonials.html
+++ b/src/components/testimonials.html
@@ -20,7 +20,9 @@
             </div>
 
             <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
+              <div class="testimonials__item-img">
+                <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
+              </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Morris Reichman</span>
                 <p class="testimonials__author-info p-3">
@@ -41,12 +43,18 @@
                 Their attention to detail and creativity in designing our mobile
                 app went above and beyond our expectations. Every element was
                 thoughtfully crafted, and their unique approach truly brought
-                our vision to life. We couldn’t be happier with the end...
+                our vision to life. We couldn’t be happier with the end. Their
+                attention to detail and creativity in designing our mobile app
+                went above and beyond our expectations. Every element was
+                thoughtfully crafted, and their unique approach truly brought
+                our vision to life. We couldn’t be happier with the end.
               </p>
             </div>
 
             <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-2.jpg" alt="author" />
+              <div class="testimonials__item-img">
+                <img src="./assets/img/testimonials/user-2.jpg" alt="author" />
+              </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Emily Roberts</span>
                 <p class="testimonials__author-info p-3">Founder</p>
@@ -68,7 +76,9 @@
             </div>
 
             <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-3.jpg" alt="author" />
+              <div class="testimonials__item-img">
+                <img src="./assets/img/testimonials/user-3.jpg" alt="author" />
+              </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Michael Turner</span>
                 <p class="testimonials__author-info p-3">
@@ -92,7 +102,9 @@
             </div>
 
             <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
+              <div class="testimonials__item-img">
+                <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
+              </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Morris Reichman</span>
                 <p class="testimonials__author-info p-3">
@@ -113,12 +125,18 @@
                 Their attention to detail and creativity in designing our mobile
                 app went above and beyond our expectations. Every element was
                 thoughtfully crafted, and their unique approach truly brought
-                our vision to life. We couldn’t be happier with the end...
+                our vision to life. We couldn’t be happier with the end. Their
+                attention to detail and creativity in designing our mobile app
+                went above and beyond our expectations. Every element was
+                thoughtfully crafted, and their unique approach truly brought
+                our vision to life. We couldn’t be happier with the end.
               </p>
             </div>
 
             <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-2.jpg" alt="author" />
+              <div class="testimonials__item-img">
+                <img src="./assets/img/testimonials/user-2.jpg" alt="author" />
+              </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Emily Roberts</span>
                 <p class="testimonials__author-info p-3">Founder</p>
@@ -140,7 +158,9 @@
             </div>
 
             <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-3.jpg" alt="author" />
+              <div class="testimonials__item-img">
+                <img src="./assets/img/testimonials/user-3.jpg" alt="author" />
+              </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Michael Turner</span>
                 <p class="testimonials__author-info p-3">
@@ -148,6 +168,16 @@
                 </p>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+
+        <div class="swiper__nav">
+          <div class="swiper__button-prev">
+            <span class="icon-arrow-right"></span>
+          </div>
+          <div class="swiper__button-next">
+            <span class="icon-arrow-right"></span>
           </div>
         </div>
       </div>
