--- a/src/components/cta.html
+++ b/src/components/cta.html
@@ -4,18 +4,18 @@
       <h2 class="cta__title">
         Ready to Dive into <span class="text-color">Creativity?</span>
       </h2>
-      <p class="cta__description p-1">Your Vision, Our Expertise</p>
+      <p class="cta__description p-1">Yr Vision, Our Expertise</p>
       <div class="section__action cta__action">
         <a href="#" class="btn btn_primary-green">
-          <span class="btn__icon btn__icon-calendar"></span>
+          <span class="btn__icon btn__icon-calendar">
+            <span class="icon-calendar"></span>
+          </span>
           <span class="btn__text">Schedule a Meeting</span>
         </a>
         <a href="#" class="btn btn_secondary">
           <span class="btn__text">Request Consultation</span>
           <span class="btn__icon btn__icon-arrow">
-            <svg class="icon icon-arrow-right">
-              <use xlink:href="#icon-arrow-right"></use>
-            </svg>
+            <span class="icon icon-arrow-right"></span>
           </span>
         </a>
       </div>
