--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,61 +1,65 @@
-.waves {
-  position: relative;
-  width: 100%;
-  height: 15vh;
-  margin-bottom: -7px; /*Fix for safari gap*/
-  min-height: 100px;
-  max-height: 150px;
-}
+.footer {
+  background-color: var(--dark-black);
+  color: var(--white);
 
-.content {
-  position: relative;
-  height: 20vh;
-  text-align: center;
-  background-color: white;
-}
-
-/* Animation */
-
-.parallax > use {
-  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
-}
-
-.parallax > use:nth-child(1) {
-  animation-delay: -2s;
-  animation-duration: 7s;
-}
-
-.parallax > use:nth-child(2) {
-  animation-delay: -3s;
-  animation-duration: 10s;
-}
-
-.parallax > use:nth-child(3) {
-  animation-delay: -4s;
-  animation-duration: 13s;
-}
-
-.parallax > use:nth-child(4) {
-  animation-delay: -5s;
-  animation-duration: 20s;
-}
-
-@keyframes move-forever {
-  0% {
-    transform: translate3d(-90px, 0, 0);
+  @include desktop {
+    padding: 65px 0 141px;
   }
-  100% {
-    transform: translate3d(85px, 0, 0);
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+
+    &:first-child {
+      @include desktop {
+        max-width: 446px;
+      }
+    }
+
+    &:not(:first-child) {
+      li:first-child {
+        color: var(--grey);
+        margin-bottom: 30px;
+      }
+    }
+  }
+
+  &__contacts-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    &:last-child {
+      margin-top: 30px;
+    }
   }
 }
 
-/*Shrinking for mobile*/
-@media (max-width: 768px) {
-  .waves {
-    height: 150px;
-    min-height: 40px;
-  }
-  .content {
-    height: 30vh;
+.footer-bottom {
+  background-color: #1a1a1a;
+  padding: 16px 0;
+
+  &__content {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px;
+
+    span {
+      color: var(--white);
+    }
+
+    a {
+      color: #828282;
+    }
   }
 }
