--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -175,8 +175,7 @@
 
         .btn {
           &__icon {
-            background: url("../../assets/icons/arrow-right-black.svg")
-              no-repeat 50% 50% / contain;
+            color: var(--dark-black);
           }
         }
       }
@@ -198,12 +197,16 @@
   width: 100%;
   height: 100%;
   box-shadow: 0 14px 60px 0 rgba(0, 0, 0, 0.9);
-  background: url("../../assets/img/hero-bg.jpg") no-repeat 50% 50% / cover;
+  background: url("../../assets/img/mob-menu-bg.png") no-repeat 50% 50% / cover;
   z-index: 899;
+  will-change: transform;
+  backface-visibility: hidden;
   transition: transform var(--animation);
+  opacity: 0;
 
   &.is-open {
     transform: translateX(0);
+    opacity: 1;
   }
 
   .nav {
