--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -86,17 +86,28 @@
 }
 
 .section-bg {
-  background: linear-gradient(
-    141deg,
-    #313131 28.92%,
-    #201e1e 76.39%,
-    #000 100%
-  );
+  position: relative;
+  background: linear-gradient(141deg, #313131 28.92%, #201e1e 76.39%, #000 100%);
+
+  &::before {
+    position: absolute;
+    content: "";
+    left: 86px;
+    top: 15%;
+    width: 100%;
+    height: 50%;
+    background: url("../../assets/img/lines.svg") no-repeat 50% 50% / cover;
+    transform: scale(1, -1);
+  }
 }
 
 .services {
-  padding: 120px 0;
+  padding: 60px 0;
   color: var(--white);
+
+  @include desktop {
+    padding: 120px 0;
+  }
 
   &__title {
     @include desktop {
@@ -119,11 +130,54 @@
       gap: 5px;
     }
 
+    &__item {
+      &:first-child {
+        .accordion__header {
+          background: url("../../assets/img/services/bg/bg-1.png") no-repeat 50% 50% / cover;
+        }
+      }
+
+      &:nth-child(2) {
+        .accordion__header {
+          background: url("../../assets/img/services/bg/bg-2.png") no-repeat 50% 50% / cover;
+        }
+      }
+
+      &:nth-child(3) {
+        .accordion__header {
+          background: url("../../assets/img/services/bg/bg-3.png") no-repeat 50% 50% / cover;
+        }
+      }
+
+      &:nth-child(4) {
+        .accordion__header {
+          background: url("../../assets/img/services/bg/bg-4.png") no-repeat 50% 50% / cover;
+        }
+      }
+
+      &:nth-child(5) {
+        .accordion__header {
+          background: url("../../assets/img/services/bg/bg-5.png") no-repeat 50% 50% / cover;
+        }
+      }
+
+      &:nth-child(6) {
+        .accordion__header {
+          background: url("../../assets/img/services/bg/bg-6.png") no-repeat 50% 50% / cover;
+        }
+      }
+
+      &:nth-child(7) {
+        .accordion__header {
+          background: url("../../assets/img/services/bg/bg-7.png") no-repeat 50% 50% / cover;
+        }
+      }
+    }
+
     &__header {
       position: relative;
       width: 100%;
-      background: url("../../assets/img/accordion-bg.png") no-repeat 50% 50% /
-        cover;
+      background: url("../../assets/img/accordion-bg.png") no-repeat 50% 50% / cover;
       border: none;
       padding: 19px 8px;
       display: flex;
@@ -133,7 +187,7 @@
       cursor: pointer;
       font-weight: 500;
       border-left: 2px solid transparent;
-      transition: border-left var(--animation) background var(--animation);
+      transition: all ease-in-out 0.4s;
 
       @include desktop {
         max-width: 510px;
@@ -144,11 +198,12 @@
     }
 
     &__header[aria-expanded="true"] {
-      background: url("../../assets/img/accordion-bg-active.png") no-repeat 50%
-        50% / cover;
+      //background: url("../../assets/img/accordion-bg-active.png") no-repeat 50% 50% / cover;
+
       border-left: 2px solid var(--main-green);
       backdrop-filter: blur(94px);
-      background: var(--dark-grey);
+      background: var(--dark-grey) !important;
+      color: var(--main-green);
     }
 
     &__wrapper {
@@ -172,12 +227,21 @@
 
       @include desktop {
         padding: 0;
+        min-height: 660px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
       }
     }
 
     &__content-box {
       @include desktop {
         padding: 0 16px;
+        flex: 1 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
       }
     }
 
@@ -339,8 +403,15 @@
   }
 
   &__title {
+    margin-bottom: 40px;
+
+    @include tablet {
+      margin-bottom: 60px;
+    }
+
     @include desktop {
       text-align: center;
+      margin-bottom: 90px;
     }
   }
 
@@ -348,17 +419,41 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-    margin-top: 40px;
     margin-bottom: 40px;
 
-    @include desktop {
+    @include tablet {
       flex-direction: row;
       flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 60px;
+    }
+
+    @include desktop {
+      gap: 30px;
+      margin-bottom: 90px;
     }
   }
 
   &__item {
     position: relative;
+    width: 100%;
+
+    &:not(:last-child) {
+      @include tablet {
+        max-width: calc((100% - 15px) / 2);
+      }
+
+      @include desktop {
+        max-width: calc((100% - 30px) / 2);
+      }
+    }
+  }
+
+  &__item-img {
+    img {
+      width: 100%;
+      height: auto;
+    }
   }
 
   &__item-info {
@@ -366,15 +461,59 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.1));
+    overflow: hidden;
     background: linear-gradient(
       360deg,
-      rgba(11, 12, 19, 0.3) 14.62%,
-      rgba(17, 18, 27, 0.52) 44.5%,
-      rgba(26, 26, 37, 0.1) 83.5%,
-      rgba(26, 26, 37, 0.2) 83%
+      rgba(11, 12, 19, 0.8) 15%,
+      rgba(17, 18, 27, 0.52) 44%,
+      rgba(26, 26, 37, 0.1) 83%,
+      rgba(26, 26, 37, 0) 100%
     );
-    padding: 15px 9px;
+    padding: 16px 9px;
+
+    @include tablet {
+      padding: 22px 12px;
+    }
+
+    @include desktop {
+      padding: 30px 24px;
+    }
+  }
+
+  .tag {
+    &__list {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 4px;
+      margin-top: 10px;
+      overflow-y: auto;
+
+      @include tablet {
+        gap: 8px;
+      }
+    }
+
+    &__item {
+      padding: 0 8px;
+      border: 1px solid rgba(255, 255, 255, 0.24);
+      border-radius: 40px;
+      width: fit-content;
+      background-color: rgba(35, 35, 35, 0.1);
+      color: var(--light-grey);
+      white-space: nowrap;
+
+      @include tablet {
+        padding: 3px 10px;
+      }
+    }
+  }
+
+  .elem-action {
+    @include desktop {
+      display: flex;
+      justify-content: center;
+    }
   }
 }
 
@@ -475,8 +614,7 @@
     padding: 124px 40px;
     max-width: 480px;
     width: 100%;
-    background: url("../../assets/img/team/team-bg.png") no-repeat 50% 50% /
-      cover;
+    background: url("../../assets/img/team/team-bg.png") no-repeat 50% 50% / cover;
   }
 
   &__item-wrapper {
