--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -197,7 +197,7 @@
   width: 100%;
   height: 100%;
   box-shadow: 0 14px 60px 0 rgba(0, 0, 0, 0.9);
-  background: url("../../assets/img/mob-menu-bg.png") no-repeat 50% 50% / cover;
+  background: url("../assets/img/mob-menu-bg.png") no-repeat 50% 50% / cover;
   z-index: 899;
   will-change: transform;
   backface-visibility: hidden;
