--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -90,12 +90,16 @@
       <li class="btn__item">
         <a href="#" class="btn btn_primary">
           <span class="btn__text">Contact Us</span>
-          <span class="btn__icon btn__icon-arrow"></span>
+          <span class="btn__icon btn__icon-arrow">
+            <span class="icon-arrow-right"></span>
+          </span>
         </a>
       </li>
       <li class="btn__item">
         <a href="#" class="btn btn_secondary">
-          <span class="btn__icon btn__icon-calendar"></span>
+          <span class="btn__icon btn__icon-calendar">
+            <span class="icon-calendar"></span>
+          </span>
           <span class="btn__text">Schedule a Meeting</span>
         </a>
       </li>
