--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -19,6 +19,10 @@
     gap: 20px;
     width: 100%;
 
+    @include desktop {
+      width: auto;
+    }
+
     &:first-child {
       @include desktop {
         max-width: 446px;
