--- a/src/assets/fonts/icons/icons.scss
+++ b/src/assets/fonts/icons/icons.scss
@@ -27,6 +27,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-linkedin:before {
+  content: "\e90f";
+}
+
+.icon-behance:before {
+  content: "\e910";
+}
+
 .icon-copy:before {
   content: "\e90e";
 }
@@ -34,42 +42,55 @@
 .icon-coffee:before {
   content: "\e900";
 }
+
 .icon-ok:before {
   content: "\e901";
 }
+
 .icon-star:before {
   content: "\e902";
 }
+
 .icon-info-circle:before {
   content: "\e903";
 }
+
 .icon-attach:before {
   content: "\e904";
 }
+
 .icon-calendar:before {
   content: "\e905";
 }
+
 .icon-arrow-down:before {
   content: "\e906";
 }
+
 .icon-arrow-right:before {
   content: "\e907";
 }
+
 .icon-location:before {
   content: "\e908";
 }
+
 .icon-call:before {
   content: "\e909";
 }
+
 .icon-sms:before {
   content: "\e90a";
 }
+
 .icon-facebook:before {
   content: "\e90b";
 }
+
 .icon-whatsapp:before {
   content: "\e90c";
 }
+
 .icon-dribbble:before {
   content: "\e90d";
 }
