--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,9 +1,11 @@
 <footer class="footer">
   <div class="container">
     <div class="footer__content">
-      <ul>
-        <li><h4>Elevating brands through digital innovation.</h4></li>
-        <li><p class="p-3">Mary Fisher.</p></li>
+      <ul class="footer__text">
+        <li class="footer__text-item">
+          <h4 class="footer__text-title">Elevating brands through digital innovation.</h4>
+        </li>
+        <li class="footer__text-item"><p class="footer__text-description p-3">Mary Fisher.</p></li>
       </ul>
       <ul class="footer__menu">
         <li><p class="p-1">Company</p></li>
@@ -23,41 +25,52 @@
       <ul class="footer__social">
         <li><p class="p-1">Socials</p></li>
         <li class="footer__social-item">
-          <a href="#" class="footer__social-link p-2">Dribble</a>
+          <a href="#" class="footer__social-link p-2">
+            <span class="footer__social-text">Dribble</span>
+            <span class="footer__social-icon icon-dribbble"></span>
+          </a>
         </li>
         <li class="footer__social-item">
-          <a href="#" class="footer__social-link p-2">Behance</a>
+          <a href="#" class="footer__social-link p-2">
+            <span class="footer__social-text">Behance</span>
+            <span class="footer__social-icon icon-behance"></span>
+          </a>
         </li>
         <li class="footer__social-item">
-          <a href="#" class="footer__social-link p-2">Facebook</a>
+          <a href="#" class="footer__social-link p-2">
+            <span class="footer__social-text">Facebook</span>
+            <span class="footer__social-icon icon-facebook"></span>
+          </a>
         </li>
         <li class="footer__social-item">
-          <a href="#" class="footer__social-link p-2">LinkedIn</a>
+          <a href="#" class="footer__social-link p-2">
+            <span class="footer__social-text">LinkedIn</span>
+            <span class="footer__social-icon icon-linkedin"></span>
+          </a>
         </li>
       </ul>
       <ul class="footer__contacts">
         <li><p class="p-1">Contact</p></li>
         <li class="footer__contacts-item">
-          <span class="icon-sms"></span><a class="p-2" href="mailto:email@example">email@example</a
-          ><span class="icon-copy"></span>
+          <span class="icon-sms"></span>
+          <a class="p-2" href="mailto:email@example">email@example</a>
+          <span class="icon-copy"></span>
         </li>
         <li class="footer__contacts-item">
-          <span class="icon-call"></span><a class="p-2" href="tel:+123455677">+ 1 234 55 677</a
-          ><span class="icon-copy"></span>
+          <span class="icon-call"></span><a class="p-2" href="tel:+123455677">+ 1 234 55 677</a>
+          <span class="icon-copy"></span>
         </li>
         <li class="footer__contacts-item">
           <span class="icon-location"></span>
           <p class="p-2">Warsaw, Poland</p>
         </li>
-        <li class="footer__contacts-item">
-          <a href="#" class="btn btn_secondary">
-            <span class="btn__text">Contact Us</span>
-            <span class="btn__icon btn__icon-arrow">
-              <span class="icon-arrow-right"></span>
-            </span>
-          </a>
-        </li>
       </ul>
+      <a href="#" class="btn btn_secondary footer__btn">
+        <span class="btn__text">Contact Us</span>
+        <span class="btn__icon btn__icon-arrow">
+          <span class="icon-arrow-right"></span>
+        </span>
+      </a>
     </div>
   </div>
 </footer>
@@ -70,6 +83,7 @@
     </div>
   </div>
 </div>
+
 <div class="mobile-menu" id="mobMenu">
   <div class="nav">
     <ul class="nav__list">
@@ -106,3 +120,4 @@
     </ul>
   </div>
 </div>
+ццц
