--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -64,8 +64,16 @@
           <span class="icon-location"></span>
           <p class="p-2">Warsaw, Poland</p>
         </li>
+        <li class="footer__contacts-item">
+          <a href="#" class="btn btn_secondary footer__btn footer__btn-desk">
+            <span class="btn__text">Contact Us</span>
+            <span class="btn__icon btn__icon-arrow">
+              <span class="icon-arrow-right"></span>
+            </span>
+          </a>
+        </li>
       </ul>
-      <a href="#" class="btn btn_secondary footer__btn">
+      <a href="#" class="btn btn_secondary footer__btn footer__btn-mob">
         <span class="btn__text">Contact Us</span>
         <span class="btn__icon btn__icon-arrow">
           <span class="icon-arrow-right"></span>
