--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -57,11 +57,11 @@
           <span class="icon-copy"></span>
         </li>
         <li class="footer__contacts-item">
-          <span class="icon-call"></span><a class="p-2" href="tel:+123455677">+ 1 234 55 677</a>
+          <span class="icon icon-call"></span><a class="p-2" href="tel:+123455677">+ 1 234 55 677</a>
           <span class="icon-copy"></span>
         </li>
         <li class="footer__contacts-item">
-          <span class="icon-location"></span>
+          <span class="icon icon-location"></span>
           <p class="p-2">Warsaw, Poland</p>
         </li>
         <li class="footer__contacts-item">
