--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -52,13 +52,13 @@
       <ul class="footer__contacts">
         <li><p class="p-1">Contact</p></li>
         <li class="footer__contacts-item">
-          <span class="icon-sms"></span>
-          <a class="p-2" href="mailto:email@example">email@example</a>
-          <span class="icon-copy"></span>
+          <span class="icon-sms icon"></span>
+          <a id="email-address" class="p-2" href="mailto:email@example">email@example</a>
+          <span class="icon-copy" id="phone-copy"></span>
         </li>
         <li class="footer__contacts-item">
-          <span class="icon icon-call"></span><a class="p-2" href="tel:+123455677">+ 1 234 55 677</a>
-          <span class="icon-copy"></span>
+          <span class="icon icon-call"></span><a id="phone-number" class="p-2" href="tel:+123455677">+ 1 234 55 677</a>
+          <span id="email-copy" class="icon-copy"></span>
         </li>
         <li class="footer__contacts-item">
           <span class="icon icon-location"></span>
@@ -128,4 +128,3 @@
     </ul>
   </div>
 </div>
-ццц
