--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -453,7 +453,7 @@
   }
 
   &__item-info {
-    position: absolute;
+    //position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -489,8 +489,7 @@
         gap: 8px;
       }
     }
-
-    &__item {
+    q &__item {
       padding: 0 8px;
       border: 1px solid rgba(255, 255, 255, 0.24);
       border-radius: 40px;
@@ -577,6 +576,7 @@
 }
 
 .team {
+  padding: 60px 0;
   background: linear-gradient(141deg, #313131 0%, #000 100%);
   color: var(--white);
 
@@ -584,9 +584,13 @@
     padding: 120px 0;
   }
 
+  &__list {
+    margin-bottom: 40px;
+  }
+
   &__item-img {
-    position: absolute;
-    bottom: -100px;
+    //position: absolute;
+    //bottom: -100px;
     width: 100%;
     right: 0;
     height: 100%;
@@ -596,13 +600,28 @@
       object-fit: cover;
       width: 100%;
     }
+
+    @include tablet {
+      position: absolute;
+    }
   }
 
-  &__item-skills {
+  &___btn {
+    display: flex;
+
+    @include desktop {
+      display: none;
+    }
+  }
+
+  &__title-mob {
+    @include desktop {
+      display: none;
+    }
   }
 
   &__banner {
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 40px;
     box-shadow: 0 18px 40px 0 rgba(89, 89, 89, 0.08);
@@ -611,12 +630,19 @@
     max-width: 480px;
     width: 100%;
     background: url("../../assets/img/team/team-bg.png") no-repeat 50% 50% / cover;
+
+    @include desktop {
+      display: flex;
+    }
   }
 
   &__item-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
+  }
+
+  &__title-mob {
   }
 
   &__banner {
@@ -627,13 +653,23 @@
   &__info {
     position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 50px 60px 0 60px;
-    flex: 1 0 auto;
+
+    @include tablet {
+      width: 100%;
+    }
+
+    @include desktop {
+      //padding: 50px 60px 0 60px;
+      //flex: 1 0 auto;
+    }
   }
 
   &__info-text {
+    position: absolute;
+    top: 10%;
     display: flex;
     flex-direction: column;
     gap: 90px;
@@ -648,9 +684,18 @@
   }
 
   &__item-skills {
+    //position: absolute;
+    //bottom: 0;
     display: flex;
     flex-direction: column;
     gap: 16px;
+
+    @include tablet {
+      bottom: auto;
+      top: 35%;
+      right: 0;
+      margin: 178px 0;
+    }
 
     li {
       display: flex;
