--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -586,6 +586,31 @@
 
   &__list {
     margin-bottom: 40px;
+    position: relative;
+    .swiper {
+      &__nav {
+        position: absolute;
+        top: 50px;
+        right: 50px;
+        width: 110px;
+        height: 24px;
+        font-size: 24px;
+        line-height: 24px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      &__button-prev {
+        transform: rotate(-180deg);
+      }
+
+      &__button-next {
+        margin-top: 3px;
+      }
+    }
+    @include desktop {
+    }
   }
 
   &__item-img {
@@ -606,7 +631,7 @@
     }
   }
 
-  &___btn {
+  &__btn {
     display: flex;
 
     @include desktop {
@@ -633,6 +658,7 @@
 
     @include desktop {
       display: flex;
+      margin-right: 60px;
     }
   }
 
