--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -599,6 +599,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        z-index: 900;
       }
 
       &__button-prev {
