--- a/src/components/cta.html
+++ b/src/components/cta.html
@@ -1,10 +1,8 @@
 <section class="cta">
   <div class="container">
     <div class="cta__content">
-      <h2 class="cta__title">
-        Ready to Dive into <span class="text-color">Creativity?</span>
-      </h2>
-      <p class="cta__description p-1">Yr Vision, Our Expertise</p>
+      <h2 class="cta__title">Ready to Dive into <span class="text-color">Creativity?</span></h2>
+      <p class="cta__description p-1">Your Vision, Our Expertise</p>
       <div class="section__action cta__action">
         <a href="#" class="btn btn_primary-green">
           <span class="btn__icon btn__icon-calendar">
