--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -24,6 +24,7 @@
   &__contacts {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 20px;
     width: 100%;
 
@@ -127,6 +128,7 @@
     @include tablet {
       flex-direction: column;
       order: 3;
+      align-items: flex-start;
     }
 
     li:first-child {
