--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -237,7 +237,7 @@
 
     &__content-box {
       @include desktop {
-        padding: 0 16px;
+        padding: 0 24px;
         flex: 1 0 auto;
         display: flex;
         flex-direction: column;
@@ -248,10 +248,10 @@
     &__image {
       width: 100%;
       overflow: hidden;
-      margin-bottom: 24px;
+      margin-bottom: 30px;
 
       @include tablet {
-        max-height: 325px;
+        max-height: 335px;
       }
 
       img {
@@ -407,7 +407,7 @@
 
     @include desktop {
       text-align: center;
-      margin-bottom: 90px;
+      margin-bottom: 93px;
     }
   }
 
@@ -585,7 +585,6 @@
   }
 
   &__list {
-    margin-bottom: 40px;
     position: relative;
     .swiper {
       &__nav {
@@ -616,9 +615,9 @@
 
   &__item-img {
     //position: absolute;
-    //bottom: -100px;
+    //bottom: -75px;
     width: 100%;
-    right: 0;
+    //right: -17px;
     height: 100%;
     max-width: 467px;
 
@@ -629,6 +628,12 @@
 
     @include tablet {
       position: absolute;
+    }
+
+    @include desktop {
+      bottom: -66px;
+      right: -24px;
+      max-width: 510px;
     }
   }
 
@@ -652,9 +657,10 @@
     gap: 40px;
     box-shadow: 0 18px 40px 0 rgba(89, 89, 89, 0.08);
     background: var(--dark-black);
-    padding: 124px 40px;
+    padding: 130px 40px;
     max-width: 480px;
     width: 100%;
+    height: 567px;
     background: url("../../assets/img/team/team-bg.png") no-repeat 50% 50% / cover;
 
     @include desktop {
@@ -667,14 +673,6 @@
     display: flex;
     justify-content: space-between;
     align-items: stretch;
-  }
-
-  &__title-mob {
-  }
-
-  &__banner {
-    max-width: 480px;
-    width: 100%;
   }
 
   &__info {
@@ -702,9 +700,7 @@
     gap: 90px;
 
     .p-2 {
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 1.62;
+      display: block;
       color: #bdbdbd;
       margin-top: 10px;
     }
@@ -721,7 +717,7 @@
       bottom: auto;
       top: 35%;
       right: 0;
-      margin: 178px 0;
+      margin: 230px 0 200px;
     }
 
     li {
