--- a/src/components/testimonials.html
+++ b/src/components/testimonials.html
@@ -1,9 +1,7 @@
 <section class="testimonials">
   <div class="container">
     <div class="testimonials__content">
-      <h2 class="testimonials__title">
-        What our <span class="text-color">clients</span> say
-      </h2>
+      <h2 class="testimonials__title">What our <span class="text-color">clients</span> say</h2>
       <div class="testimonials__list swiper">
         <div class="swiper-wrapper">
           <div class="testimonials__item swiper-slide">
@@ -13,9 +11,8 @@
                 <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
               </div>
               <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
+                Working with this team was a game-changer for our brand. They brought our vision to life with a sleek,
+                modern website that truly stands out!
               </p>
             </div>
 
@@ -25,9 +22,7 @@
               </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Morris Reichman</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
+                <p class="testimonials__author-info p-3">COO, First Choice Shipping</p>
               </div>
             </div>
           </div>
@@ -40,14 +35,11 @@
               </div>
 
               <p class="testimonials__item-text p-1">
-                Their attention to detail and creativity in designing our mobile
-                app went above and beyond our expectations. Every element was
-                thoughtfully crafted, and their unique approach truly brought
-                our vision to life. We couldn’t be happier with the end. Their
-                attention to detail and creativity in designing our mobile app
-                went above and beyond our expectations. Every element was
-                thoughtfully crafted, and their unique approach truly brought
-                our vision to life. We couldn’t be happier with the end.
+                Their attention to detail and creativity in designing our mobile app went above and beyond our
+                expectations. Every element was thoughtfully crafted, and their unique approach truly brought our vision
+                to life. We couldn’t be happier with the end. Their attention to detail and creativity in designing our
+                mobile app went above and beyond our expectations. Every element was thoughtfully crafted, and their
+                unique approach truly brought our vision to life. We couldn’t be happier with the end.
               </p>
             </div>
 
@@ -69,9 +61,8 @@
                 <img src="./assets/img/testimonials/logo-2.svg" alt="logo" />
               </div>
               <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
+                Working with this team was a game-changer for our brand. They brought our vision to life with a sleek,
+                modern website that truly stands out!
               </p>
             </div>
 
@@ -81,9 +72,7 @@
               </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Michael Turner</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
+                <p class="testimonials__author-info p-3">COO, First Choice Shipping</p>
               </div>
             </div>
           </div>
@@ -95,9 +84,8 @@
                 <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
               </div>
               <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
+                Working with this team was a game-changer for our brand. They brought our vision to life with a sleek,
+                modern website that truly stands out!
               </p>
             </div>
 
@@ -107,9 +95,7 @@
               </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Morris Reichman</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
+                <p class="testimonials__author-info p-3">COO, First Choice Shipping</p>
               </div>
             </div>
           </div>
@@ -122,14 +108,11 @@
               </div>
 
               <p class="testimonials__item-text p-1">
-                Their attention to detail and creativity in designing our mobile
-                app went above and beyond our expectations. Every element was
-                thoughtfully crafted, and their unique approach truly brought
-                our vision to life. We couldn’t be happier with the end. Their
-                attention to detail and creativity in designing our mobile app
-                went above and beyond our expectations. Every element was
-                thoughtfully crafted, and their unique approach truly brought
-                our vision to life. We couldn’t be happier with the end.
+                Their attention to detail and creativity in designing our mobile app went above and beyond our
+                expectations. Every element was thoughtfully crafted, and their unique approach truly brought our vision
+                to life. We couldn’t be happier with the end. Their attention to detail and creativity in designing our
+                mobile app went above and beyond our expectations. Every element was thoughtfully crafted, and their
+                unique approach truly brought our vision to life. We couldn’t be happier with the end.
               </p>
             </div>
 
@@ -151,9 +134,8 @@
                 <img src="./assets/img/testimonials/logo-2.svg" alt="logo" />
               </div>
               <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
+                Working with this team was a game-changer for our brand. They brought our vision to life with a sleek,
+                modern website that truly stands out!
               </p>
             </div>
 
@@ -163,9 +145,7 @@
               </div>
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Michael Turner</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
+                <p class="testimonials__author-info p-3">COO, First Choice Shipping</p>
               </div>
             </div>
           </div>
