--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -100,6 +100,13 @@
 
     .icon {
       color: var(--grey);
+      font-size: 20px;
+      line-height: 20px;
+    }
+
+    .icon-copy {
+      font-size: 20px;
+      line-height: 20px;
     }
 
     @include tablet {
@@ -218,9 +225,9 @@
   &__content {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
-    gap: 30px;
-    flex-direction: column;
+    align-items: flex-start;
+    gap: 14px;
+    flex-direction: column-reverse;
 
     @include tablet {
       flex-direction: row;
